--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>18 October 1992</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+918105294916</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+917815911423</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Andhra Pradesh, INDIA</span></li>
               </ul>
             </div>
@@ -80,13 +80,13 @@
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>29</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Master (MBA)</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kamalit.atp@gmail.com</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>kamalakar.mrp@gmail.com</span></li>
               </ul>
             </div>
           </div>
           <p>
             I am an experienced DevOps engineer with a passion for automating workflows and 
-            optimizing processes. I have three years of experience working in this field and I 
+            optimizing processes. I have four years of experience working in this field and I 
             understand the delicate balance between operations and development. I am able to quickly 
             deliver code to customers without compromising quality.
           </p>
@@ -141,7 +141,7 @@
           <h3 class="resume-title">Sumary</h3>
           <div class="resume-item">
             <h4>Kamalakar.B</h4>
-            <p>I am an experienced DevOps engineer with a passion for automating workflows and optimizing processes. I have three years of experience working in this field and I understand the delicate balance between operations and development. I am able to quickly 
+            <p>I am an experienced DevOps engineer with a passion for automating workflows and optimizing processes. I have four years of experience working in this field and I understand the delicate balance between operations and development. I am able to quickly 
               deliver code to customers without compromising quality.
               </p>
               •	I am an experienced DevOps engineer with a passion for automating workflows and optimizing processes. I have three years of experience working in this field and I understand the delicate balance between operations and development. I am able to quickly deliver code to customers without compromising quality.</br>
@@ -194,7 +194,7 @@
         <div class="container">
           <p><h5 style="color:rgb(0, 170, 255)">Project # 1:</h5>
             <h5 style="color:rgb(0, 170, 255)">Client: Citi Group </h5>
-            <h5 style="color:rgb(0, 170, 255)">Period: April 2019 to March 2021 </h5>
+            <h5 style="color:rgb(0, 170, 255)">Period: April 2018 to March 2021 </h5>
             <h5 style="color:rgb(0, 170, 255)">Technology Stack: AWS Cloud & DevOps</h5>
             <h5 style="color:rgb(0, 170, 255)">Responsibilities:</h5>
           <p>
@@ -254,14 +254,14 @@
           <div class="info-box">
             <i class="bx bx-envelope"></i>
             <h3>Email Me</h3>
-            <p>kamalit.atp@gmail.com</p>
+            <p>kamalakar.mrp@gmail.com</p>
           </div>
         </div>
         <div class="col-md-6 mt-4 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-phone-call"></i>
             <h3>Call Me</h3>
-            <p>+91 8105294916</p>
+            <p>+91 7815911423</p>
           </div>
         </div>
       </div>
